[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tileset.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Tileset2" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 47, 0, 1, 47, 0, 2, 47, 0, 3, 47, 0, 4, 47, 0, 5, 47, 0, 6, 47, 0, 7, 47, 0, 8, 47, 0, 9, 47, 0, 10, 47, 0, 11, 47, 0, 12, 47, 0, 13, 47, 0, 14, 47, 0, 15, 47, 0, 16, 47, 0, 17, 47, 0, 18, 47, 0, 19, 47, 0, 20, 47, 0, 21, 47, 0, 22, 47, 0, 23, 47, 0, 24, 47, 0, 25, 47, 0, 26, 47, 0, 27, 47, 0, 28, 47, 0, 29, 47, 0, 30, 47, 0, 31, 47, 0, 65536, 47, 0, 65537, 47, 0, 65538, 47, 0, 65539, 47, 0, 65540, 47, 0, 65541, 47, 0, 65542, 47, 0, 65543, 47, 0, 65544, 47, 0, 65545, 47, 0, 65546, 47, 0, 65547, 47, 0, 65548, 47, 0, 65549, 47, 0, 65550, 47, 0, 65551, 47, 0, 65552, 47, 0, 65553, 47, 0, 65554, 47, 0, 65555, 47, 0, 65556, 47, 0, 65557, 47, 0, 65558, 47, 0, 65559, 47, 0, 65560, 47, 0, 65561, 47, 0, 65562, 47, 0, 65563, 47, 0, 65564, 47, 0, 65565, 47, 0, 65566, 47, 0, 65567, 47, 0, 131072, 47, 0, 131073, 47, 0, 131074, 47, 0, 131075, 47, 0, 131076, 47, 0, 131077, 47, 0, 131078, 47, 0, 131079, 47, 0, 131080, 47, 0, 131081, 47, 0, 131082, 47, 0, 131083, 47, 0, 131084, 47, 0, 131085, 47, 0, 131086, 47, 0, 131087, 47, 0, 131088, 47, 0, 131089, 47, 0, 131090, 47, 0, 131091, 47, 0, 131092, 47, 0, 131093, 47, 0, 131094, 47, 0, 131095, 47, 0, 131096, 47, 0, 131097, 47, 0, 131098, 47, 0, 131099, 47, 0, 131100, 47, 0, 131101, 47, 0, 131102, 47, 0, 131103, 47, 0, 196608, 47, 0, 196609, 47, 0, 196610, 47, 0, 196611, 47, 0, 196612, 47, 0, 196613, 47, 0, 196614, 47, 0, 196615, 47, 0, 196616, 47, 0, 196617, 47, 0, 196618, 47, 0, 196619, 47, 0, 196620, 47, 0, 196621, 47, 0, 196622, 47, 0, 196623, 47, 0, 196624, 47, 0, 196625, 47, 0, 196626, 47, 0, 196627, 47, 0, 196628, 47, 0, 196629, 47, 0, 196630, 47, 0, 196631, 47, 0, 196632, 47, 0, 196633, 47, 0, 196634, 47, 0, 196635, 47, 0, 196636, 47, 0, 196637, 47, 0, 196638, 47, 0, 196639, 47, 0, 262144, 47, 0, 262145, 47, 0, 262146, 47, 0, 262147, 47, 0, 262148, 47, 0, 262149, 47, 0, 262150, 47, 0, 262151, 47, 0, 262152, 47, 0, 262153, 47, 0, 262154, 47, 0, 262155, 47, 0, 262156, 47, 0, 262157, 47, 0, 262158, 47, 0, 262159, 47, 0, 262160, 47, 0, 262161, 47, 0, 262162, 47, 0, 262163, 47, 0, 262164, 47, 0, 262165, 47, 0, 262166, 47, 0, 262167, 47, 0, 262168, 47, 0, 262169, 47, 0, 262170, 47, 0, 262171, 47, 0, 262172, 47, 0, 262173, 47, 0, 262174, 47, 0, 262175, 47, 0, 327680, 47, 0, 327681, 47, 0, 327682, 47, 0, 327683, 47, 0, 327684, 47, 0, 327685, 47, 0, 327686, 47, 0, 327687, 47, 0, 327688, 47, 0, 327689, 47, 0, 327690, 47, 0, 327691, 47, 0, 327692, 47, 0, 327693, 47, 0, 327694, 47, 0, 327695, 47, 0, 327696, 47, 0, 327697, 47, 0, 327698, 47, 0, 327699, 47, 0, 327700, 47, 0, 327701, 47, 0, 327702, 47, 0, 327703, 47, 0, 327704, 47, 0, 327705, 47, 0, 327706, 47, 0, 327707, 47, 0, 327708, 47, 0, 327709, 47, 0, 327710, 47, 0, 327711, 47, 0, 393216, 47, 0, 393217, 47, 0, 393218, 47, 0, 393219, 47, 0, 393220, 47, 0, 393221, 47, 0, 393222, 47, 0, 393223, 47, 0, 393224, 47, 0, 393225, 47, 0, 393226, 47, 0, 393227, 47, 0, 393228, 47, 0, 393229, 47, 0, 393230, 47, 0, 393231, 47, 0, 393232, 47, 0, 393233, 47, 0, 393234, 47, 0, 393235, 47, 0, 393236, 47, 0, 393237, 47, 0, 393238, 47, 0, 393239, 47, 0, 393240, 47, 0, 393241, 47, 0, 393242, 47, 0, 393243, 47, 0, 393244, 47, 0, 393245, 47, 0, 393246, 47, 0, 393247, 47, 0, 458752, 47, 0, 458753, 47, 0, 458754, 47, 0, 458755, 47, 0, 458756, 47, 0, 458757, 47, 0, 458758, 47, 0, 458759, 47, 0, 458760, 47, 0, 458761, 47, 0, 458762, 47, 0, 458763, 47, 0, 458764, 47, 0, 458765, 47, 0, 458766, 47, 0, 458767, 47, 0, 458768, 47, 0, 458769, 47, 0, 458770, 47, 0, 458771, 47, 0, 458772, 47, 0, 458773, 47, 0, 458774, 47, 0, 458775, 47, 0, 458776, 47, 0, 458777, 47, 0, 458778, 47, 0, 458779, 47, 0, 458780, 47, 0, 458781, 47, 0, 458782, 47, 0, 458783, 47, 0, 524288, 47, 0, 524289, 47, 0, 524290, 47, 0, 524291, 47, 0, 524292, 47, 0, 524293, 47, 0, 524294, 47, 0, 524295, 47, 0, 524296, 47, 0, 524297, 47, 0, 524298, 47, 0, 524299, 47, 0, 524300, 47, 0, 524301, 47, 0, 524302, 47, 0, 524303, 47, 0, 524304, 47, 0, 524305, 47, 0, 524306, 47, 0, 524307, 47, 0, 524308, 47, 0, 524309, 47, 0, 524310, 47, 0, 524311, 47, 0, 524312, 47, 0, 524313, 47, 0, 524314, 47, 0, 524315, 47, 0, 524316, 47, 0, 524317, 47, 0, 524318, 47, 0, 524319, 47, 0, 589824, 47, 0, 589825, 47, 0, 589826, 47, 0, 589827, 47, 0, 589828, 47, 0, 589829, 47, 0, 589830, 47, 0, 589831, 47, 0, 589832, 47, 0, 589833, 47, 0, 589834, 47, 0, 589835, 47, 0, 589836, 47, 0, 589837, 47, 0, 589838, 47, 0, 589839, 47, 0, 589840, 47, 0, 589841, 47, 0, 589842, 47, 0, 589843, 47, 0, 589844, 47, 0, 589845, 47, 0, 589846, 47, 0, 589847, 47, 0, 589848, 47, 0, 589849, 47, 0, 589850, 47, 0, 589851, 47, 0, 589852, 47, 0, 589853, 47, 0, 589854, 47, 0, 589855, 47, 0, 655360, 47, 0, 655361, 47, 0, 655362, 47, 0, 655363, 47, 0, 655364, 47, 0, 655365, 47, 0, 655366, 47, 0, 655367, 47, 0, 655368, 47, 0, 655369, 47, 0, 655370, 47, 0, 655371, 47, 0, 655372, 47, 0, 655373, 47, 0, 655374, 47, 0, 655375, 47, 0, 655376, 47, 0, 655377, 47, 0, 655378, 47, 0, 655379, 47, 0, 655380, 47, 0, 655381, 47, 0, 655382, 47, 0, 655383, 47, 0, 655384, 47, 0, 655385, 47, 0, 655386, 47, 0, 655387, 47, 0, 655388, 47, 0, 655389, 47, 0, 655390, 47, 0, 655391, 47, 0, 720896, 47, 0, 720897, 47, 0, 720898, 47, 0, 720899, 47, 0, 720900, 47, 0, 720901, 47, 0, 720902, 47, 0, 720903, 47, 0, 720904, 47, 0, 720905, 47, 0, 720906, 47, 0, 720907, 46, 393216, 720908, 46, 3, 720909, 46, 2, 720910, 46, 1, 720911, 46, 2, 720912, 46, 1, 720913, 46, 2, 720914, 46, 3, 720915, 46, 4, 720916, 47, 0, 720917, 47, 0, 720918, 47, 0, 720919, 47, 0, 720920, 47, 0, 720921, 47, 0, 720922, 47, 0, 720923, 47, 0, 720924, 47, 0, 720925, 47, 0, 720926, 47, 0, 720927, 47, 0, 786432, 47, 0, 786433, 47, 0, 786434, 47, 0, 786435, 47, 0, 786436, 47, 0, 786437, 47, 0, 786438, 47, 0, 786439, 47, 0, 786440, 47, 0, 786441, 47, 0, 786442, 47, 0, 786443, 46, 196608, 786444, 46, 196610, 786445, 46, 65537, 786446, 46, 65538, 786447, 46, 65539, 786448, 46, 196609, 786449, 46, 131073, 786450, 46, 196611, 786451, 46, 65540, 786452, 47, 0, 786453, 47, 0, 786454, 47, 0, 786455, 47, 0, 786456, 47, 0, 786457, 47, 0, 786458, 47, 0, 786459, 47, 0, 786460, 47, 0, 786461, 47, 0, 786462, 47, 0, 786463, 47, 0, 917503, 46, 393216, 851968, 46, 393217, 851969, 46, 393217, 851970, 46, 2, 851971, 46, 393217, 851972, 46, 393217, 851973, 46, 2, 851974, 46, 2, 851975, 46, 393217, 851976, 46, 3, 851977, 46, 2, 851978, 46, 393217, 851979, 46, 196613, 851980, 46, 131073, 851981, 46, 65539, 851982, 46, 196610, 851983, 46, 65539, 851984, 46, 196611, 851985, 46, 196609, 851986, 46, 196610, 851987, 46, 65541, 851988, 46, 2, 851989, 46, 3, 851990, 46, 393217, 851991, 46, 2, 851992, 46, 2, 851993, 46, 2, 851994, 46, 3, 851995, 46, 393217, 851996, 46, 1, 851997, 46, 2, 851998, 46, 393217, 851999, 46, 1, 852000, 46, 393218, 983039, 46, 262144, 917504, 46, 262146, 917505, 46, 262146, 917506, 46, 458753, 917507, 46, 262145, 917508, 46, 262145, 917509, 46, 458753, 917510, 46, 262145, 917511, 46, 262146, 917512, 46, 262147, 917513, 46, 262145, 917514, 46, 262145, 917515, 46, 131077, 917516, 46, 131075, 917517, 46, 196610, 917518, 46, 131075, 917519, 46, 131074, 917520, 46, 131073, 917521, 46, 131075, 917522, 46, 131073, 917523, 46, 5, 917524, 46, 262145, 917525, 46, 262147, 917526, 46, 458753, 917527, 46, 262145, 917528, 46, 458753, 917529, 46, 262146, 917530, 46, 262146, 917531, 46, 262145, 917532, 46, 262146, 917533, 46, 262146, 917534, 46, 262145, 917535, 46, 262145, 917536, 46, 458754, 983040, 47, 0, 983041, 47, 0, 983042, 47, 0, 983043, 47, 0, 983044, 47, 0, 983045, 47, 0, 983046, 47, 0, 983047, 47, 0, 983048, 47, 0, 983049, 47, 0, 983050, 47, 0, 983051, 46, 196608, 983052, 46, 196611, 983053, 46, 65537, 983054, 46, 131073, 983055, 46, 65538, 983056, 46, 196610, 983057, 46, 65537, 983058, 46, 65539, 983059, 46, 131076, 983060, 47, 0, 983061, 47, 0, 983062, 47, 0, 983063, 47, 0, 983064, 47, 0, 983065, 47, 0, 983066, 47, 0, 983067, 47, 0, 983068, 47, 0, 983069, 47, 0, 983070, 47, 0, 983071, 47, 0, 1048576, 47, 0, 1048577, 47, 0, 1048578, 47, 0, 1048579, 47, 0, 1048580, 47, 0, 1048581, 47, 0, 1048582, 47, 0, 1048583, 47, 0, 1048584, 47, 0, 1048585, 47, 0, 1048586, 47, 0, 1048587, 46, 262144, 1048588, 46, 262145, 1048589, 46, 458753, 1048590, 46, 262145, 1048591, 46, 131077, 1048592, 46, 5, 1048593, 46, 262146, 1048594, 46, 262147, 1048595, 46, 458754, 1048596, 47, 0, 1048597, 47, 0, 1048598, 47, 0, 1048599, 47, 0, 1048600, 47, 0, 1048601, 47, 0, 1048602, 47, 0, 1048603, 47, 0, 1048604, 47, 0, 1048605, 47, 0, 1048606, 47, 0, 1048607, 47, 0, 1114112, 47, 0, 1114113, 47, 0, 1114114, 47, 0, 1114115, 47, 0, 1114116, 47, 0, 1114117, 47, 0, 1114118, 47, 0, 1114119, 47, 0, 1114120, 47, 0, 1114121, 47, 0, 1114122, 47, 0, 1114123, 47, 0, 1114124, 47, 0, 1114125, 47, 0, 1114126, 47, 0, 1114127, 46, 65536, 1114128, 46, 65540, 1114129, 47, 0, 1114130, 47, 0, 1114131, 47, 0, 1114132, 47, 0, 1114133, 47, 0, 1114134, 47, 0, 1114135, 47, 0, 1114136, 47, 0, 1114137, 47, 0, 1114138, 47, 0, 1114139, 47, 0, 1114140, 47, 0, 1114141, 47, 0, 1114142, 47, 0, 1114143, 47, 0, 1179648, 47, 0, 1179649, 47, 0, 1179650, 47, 0, 1179651, 47, 0, 1179652, 47, 0, 1179653, 47, 0, 1179654, 47, 0, 1179655, 47, 0, 1179656, 47, 0, 1179657, 47, 0, 1179658, 47, 0, 1179659, 47, 0, 1179660, 47, 0, 1179661, 47, 0, 1179662, 47, 0, 1179663, 46, 131072, 1179664, 46, 131076, 1179665, 47, 0, 1179666, 47, 0, 1179667, 47, 0, 1179668, 47, 0, 1179669, 47, 0, 1179670, 47, 0, 1179671, 47, 0, 1179672, 47, 0, 1179673, 47, 0, 1179674, 47, 0, 1179675, 47, 0, 1179676, 47, 0, 1179677, 47, 0, 1179678, 47, 0, 1179679, 47, 0, 1245199, 46, 458752, 1245200, 46, 262148 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 448 )

[node name="Label" type="Label" parent="."]
margin_left = 489.0
margin_top = 561.0
margin_right = 537.0
margin_bottom = 583.0
custom_fonts/font = ExtResource( 4 )
text = "Start"

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 432.0
margin_right = 67.0
margin_bottom = 463.0
custom_fonts/font = ExtResource( 4 )
text = "Settings
"

[node name="Label3" type="Label" parent="."]
margin_left = 960.0
margin_top = 432.0
margin_right = 1000.0
margin_bottom = 446.0
custom_fonts/font = ExtResource( 4 )
text = "Exit"

[node name="Label4" type="Label" parent="."]
margin_left = 464.0
margin_top = 240.0
margin_right = 565.0
margin_bottom = 262.0
custom_fonts/font = ExtResource( 4 )
text = "Dronescape"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 512, 640 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( -32, 448 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 1 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 1056, 448 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_entered" from="Area2D3" to="." method="_on_Area2D3_area_entered"]
